Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_moment_comment_item.xml
+++ b/app/src/main/res/layout/layout_moment_comment_item.xml
@@ -29,7 +29,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
         <LinearLayout
                 android:layout_toRightOf="@id/moment_comment_image"
