--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content"
             android:text="@string/feedback_help"
             android:textStyle="normal"
+            android:visibility="gone"
             style="@style/MinePageItem"/>
 
     <View
