1. 教室隐藏“禁止教室聊天”开关

--- a/app/src/main/res/layout/layout_classroom_setting.xml
+++ b/app/src/main/res/layout/layout_classroom_setting.xml
@@ -161,6 +161,7 @@
                 android:paddingRight="@dimen/px30"
                 android:paddingTop="@dimen/px30"
                 android:paddingBottom="@dimen/px30"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
             <TextView
