--- a/app/src/main/res/layout/layout_classroom_talk.xml
+++ b/app/src/main/res/layout/layout_classroom_talk.xml
@@ -21,7 +21,7 @@
 
             <RelativeLayout
                     android:id="@+id/multi_talk_tab"
-                    android:layout_weight="1.4"
+                    android:layout_weight="1.2"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/px80"
                     android:paddingLeft="@dimen/px20"
@@ -45,6 +45,7 @@
                         android:background="@drawable/toggle_btn_selector"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:visibility="gone"
                         android:textOff=""
                         android:textOn=""/>
             </RelativeLayout>
