1.  增加点击区域

--- a/app/src/main/res/layout/layout_lesson_operation.xml
+++ b/app/src/main/res/layout/layout_lesson_operation.xml
@@ -20,6 +20,7 @@
             android:orientation="horizontal"
             android:layout_centerInParent="true"
             android:layout_alignParentLeft="true"
+            android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -75,7 +76,7 @@
                 android:id="@+id/lesson_more"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_lesson_more"
-                android:layout_marginLeft="@dimen/px30"
+                android:padding="@dimen/px30"
                 android:layout_centerInParent="true"
                 android:layout_toRightOf="@+id/divider2"
                 android:layout_width="wrap_content"
