Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/activity_certification.xml
+++ b/app/src/main/res/layout/activity_certification.xml
@@ -59,6 +59,7 @@
             </FrameLayout>
 
             <LinearLayout
+                    android:id="@+id/lay_info"
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:layout_marginTop="@dimen/px30"
