--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <cn.xiaojs.xma.ui.widget.EditTextDel
+        <TextView
                 android:id="@+id/my_course_search"
                 android:layout_width="0dp"
                 android:layout_weight="1"
