--- a/app/src/main/res/layout/activity_certification.xml
+++ b/app/src/main/res/layout/activity_certification.xml
@@ -227,6 +227,7 @@
                             android:textColor="@color/font_black"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/font_30px"
+                            android:maxLength="16"
                             android:hint="@string/certification_name_tip"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
@@ -260,6 +261,8 @@
                             android:textColor="@color/font_black"
                             android:layout_gravity="center_vertical"
                             android:textSize="@dimen/font_30px"
+                            android:maxLength="18"
+                            android:inputType="number"
                             android:hint="@string/certification_number_tips"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
