--- a/app/src/main/res/layout/layout_list_empty.xml
+++ b/app/src/main/res/layout/layout_list_empty.xml
@@ -4,6 +4,7 @@
                 android:layout_height="match_parent">
 
     <LinearLayout
+            android:id="@+id/empty_layout"
             android:orientation="vertical"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
