--- a/app/src/main/res/layout/layout_live_menu.xml
+++ b/app/src/main/res/layout/layout_live_menu.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
             android:layout_gravity="center_vertical"
+            android:visibility="gone"
             android:src="@drawable/switch_camera_selector"/>
 
     <ImageView
@@ -20,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
+            android:visibility="gone"
             android:layout_gravity="center_vertical"
             android:src="@drawable/camera_selector"/>
 
@@ -28,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/px20"
+            android:visibility="gone"
             android:layout_gravity="center_vertical"
             android:src="@drawable/mic_selector"/>
 
