--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -39,16 +39,18 @@
                 android:layout_marginRight="@dimen/px30"
                 android:src="@drawable/add_selector"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
         <ImageView
                 android:id="@+id/people_image"
                 android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/px30"
-                android:layout_toLeftOf="@id/right_image"
-                android:src="@drawable/mail_list_selector"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:src="@drawable/mail_list_selector"
+                />
     </RelativeLayout>
 
     <View style="@style/DividerHorizontal"/>
