--- a/app/src/main/res/layout/layout_message_category_list_item.xml
+++ b/app/src/main/res/layout/layout_message_category_list_item.xml
@@ -44,7 +44,9 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="@dimen/px30"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                />
 
         <TextView
                 android:id="@+id/message_list_item_opera2"
@@ -54,7 +56,32 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="@dimen/px60"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                />
+
+        <!--<Button-->
+        <!--android:id="@+id/message_item_btn_opera1"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:text="同意"-->
+        <!--android:textSize="@dimen/font_28px"-->
+        <!--android:textColor="@color/common_text"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="@dimen/px30"-->
+        <!--/>-->
+
+        <!--<Button-->
+        <!--android:id="@+id/message_item_btn_opera2"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:text="拒绝"-->
+        <!--android:textSize="@dimen/font_28px"-->
+        <!--android:textColor="@color/common_text"-->
+        <!--android:layout_toLeftOf="@id/message_item_btn_opera1"-->
+        <!--/>-->
+
+
     </RelativeLayout>
 
     <View
