--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -73,6 +73,8 @@
                 android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
                 android:background="@null"
+                android:hint="@string/not_setting"
+                android:textColorHint="@color/font_light_gray"
                 android:paddingRight="@dimen/px26"/>
     </LinearLayout>
 
@@ -108,6 +110,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/font_black"
+                android:hint="@string/not_setting"
+                android:textColorHint="@color/font_light_gray"
                 android:textSize="@dimen/font_28px"
                 android:paddingRight="@dimen/px26"
                 android:background="@null"/>
@@ -146,6 +150,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
+                android:hint="@string/not_setting"
+                android:textColorHint="@color/font_light_gray"
                 android:background="@null"
                 android:paddingRight="@dimen/px26"/>
     </LinearLayout>
@@ -186,6 +192,8 @@
                 android:paddingRight="@dimen/px26"
                 android:maxLines="2"
                 android:maxLength="20"
+                android:hint="@string/default_profile_txt"
+                android:textColorHint="@color/font_light_gray"
                 android:background="@null"/>
     </LinearLayout>
 
