1. 我的界面，分割线多于

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -124,6 +124,7 @@
         </RelativeLayout>
 
         <View
+                android:visibility="gone"
                 style="@style/DividerHorizontal"/>
 
         <!--我的收藏-->
