Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -117,8 +117,8 @@
     <string-array name="share_scope">
         <item>所有人</item>
         <item>仅好友</item>
-        <item>班级圈</item>
-        <item>部分人</item>
+        <!--<item>班级圈</item>-->
+        <!--<item>部分人</item>-->
         <item>仅自己可见</item>
     </string-array>
 
