--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -265,8 +265,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@+id/enter_name_auth"
-                    android:textColor="@color/font_black"
+                    android:textColor="@color/font_dark_gray"
                     android:textSize="@dimen/px26"
+                    android:text="未认证"
                     android:layout_marginRight="@dimen/px20"/>
 
             <ImageView
