--- a/app/src/main/res/layout/layout_live_header.xml
+++ b/app/src/main/res/layout/layout_live_header.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:background="@color/white"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:layout_marginBottom="@dimen/px120">
 
     <LinearLayout
             android:id="@+id/teacher_wrapper"
