Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -76,5 +76,6 @@
             android:divider="@color/hor_divide_line"
             android:scrollbars="none"
             android:layout_marginBottom="@dimen/px110"
-            ></ListView>
+            >
+    </ListView>
 </LinearLayout>
