1.  设置页面，展示缓存大小

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -38,6 +38,7 @@
             style="@style/MinePageItem">
 
         <TextView
+                android:id="@+id/cache_title"
                 android:layout_alignParentLeft="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,18 +47,20 @@
                 android:text="@string/clear_cache"/>
 
         <TextView
-                android:id="@+id/clear_cache"
+                android:id="@+id/data_cache"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/enter_clear_cache"
-                android:textColor="@color/font_black"
+                android:layout_toLeftOf="@+id/cache_arrow"
+                android:textColor="@color/font_dark_gray"
                 android:textSize="@dimen/px26"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/px20"/>
 
         <ImageView
-                android:id="@+id/enter_clear_cache"
+                android:id="@+id/cache_arrow"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_entrance"/>
     </RelativeLayout>
