1.  教室消息时间格式，圆角头像

--- a/app/src/main/res/layout/layout_talk_other_speaker_item.xml
+++ b/app/src/main/res/layout/layout_talk_other_speaker_item.xml
@@ -13,6 +13,7 @@
             android:layout_alignParentLeft="true"
             android:layout_width="@dimen/px56"
             android:layout_height="@dimen/px56"
+            android:scaleType="centerCrop"
             roundimg:oval="true"
             roundimg:border_color="@color/white"
             roundimg:border_width="@dimen/px2"/>
