--- a/app/src/main/res/layout/layout_classroom_talk.xml
+++ b/app/src/main/res/layout/layout_classroom_talk.xml
@@ -33,6 +33,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/classroom_discussion"
+                        android:gravity="center"
                         android:textColor="@color/font_white"
                         android:layout_centerVertical="true"
                         android:textSize="@dimen/font_30px"/>
