--- a/app/src/main/res/layout/layout_search_people_item.xml
+++ b/app/src/main/res/layout/layout_search_people_item.xml
@@ -52,7 +52,8 @@
                     android:src="@drawable/ic_follow_both"
                     android:scaleType="fitXY"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
         </RelativeLayout>
 
         <LinearLayout
@@ -62,7 +63,6 @@
 
             <TextView
                     android:id="@+id/search_people_tag"
-                    android:text="同学"
                     android:textSize="@dimen/font_28px"
                     android:textColor="@color/common_text"
                     android:layout_width="wrap_content"
@@ -75,7 +75,8 @@
                     android:textSize="@dimen/font_28px"
                     android:textColor="@color/common_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
