--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -59,15 +59,6 @@
 
     </RelativeLayout>
 
-    <ImageView
-            android:id="@+id/publish_take_pic"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/px20"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/cr_publish_take_pic"/>
-
     <RelativeLayout
             android:id="@+id/top_panel"
             android:layout_alignParentTop="true"
@@ -428,6 +419,17 @@
             android:layout_marginBottom="@dimen/px20"
             android:layout_marginLeft="@dimen/px20"
             android:visibility="gone"/>
+
+
+    <!--视频采集view-->
+    <ImageView
+            android:id="@+id/publish_take_pic"
+            android:layout_alignParentRight="true"
+            android:padding="@dimen/px20"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cr_publish_take_pic"/>
 
 </cn.xiaojs.xma.ui.classroom.MainPanel>
 
