1. 教室顶部栏，点击事件优化

--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -69,9 +69,9 @@
         <RelativeLayout
                 android:id="@+id/title_bar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/px100"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/px5"
+                android:paddingBottom="@dimen/px5"
                 android:background="@color/classroom_main_gray">
 
             <ImageView
@@ -80,9 +80,10 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_alignParentLeft="true"
-                    android:paddingLeft="@dimen/px20"
-                    android:paddingRight="@dimen/px20"
-                    android:layout_marginLeft="@dimen/px30"
+                    android:paddingLeft="@dimen/px50"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
                     android:src="@drawable/ic_back_pressed"/>
 
             <ImageView
@@ -90,9 +91,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px20"
-                    android:paddingRight="@dimen/px20"
-                    android:layout_marginLeft="@dimen/px20"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
                     android:layout_toRightOf="@+id/back_btn"
                     android:src="@drawable/ic_cr_start"/>
 
@@ -101,9 +103,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px20"
-                    android:paddingRight="@dimen/px20"
-                    android:layout_marginLeft="@dimen/px20"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
                     android:layout_toRightOf="@+id/play_pause_btn"
                     android:src="@drawable/ic_cr_exit"/>
 
@@ -139,9 +142,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px20"
-                    android:paddingRight="@dimen/px20"
-                    android:layout_marginRight="@dimen/px20"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
                     android:layout_toLeftOf="@+id/notify_msg_btn"
                     android:src="@drawable/ic_cr_contact_book"/>
 
@@ -150,9 +154,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px20"
-                    android:paddingRight="@dimen/px20"
-                    android:layout_marginRight="@dimen/px20"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
                     android:layout_toLeftOf="@+id/setting_btn"
                     android:src="@drawable/ic_cr_notice"/>
 
@@ -162,9 +167,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:paddingLeft="@dimen/px20"
-                    android:paddingRight="@dimen/px20"
-                    android:layout_marginRight="@dimen/px30"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
                     android:layout_alignParentRight="true"
                     android:src="@drawable/ic_cr_setting"/>
 
